--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -10,11 +10,19 @@ body {
 
   h1 {
     margin-bottom: 20px;
+    margin-left: 30px
   }
 
   p {
     font-size: 18px;
     line-height: 1.6;
+    margin-left: 30px
+  }
+
+  a {
+    font-size: 18px;
+    line-height: 1.6;
+    margin-left: 30px
   }
 
   #home {
@@ -50,14 +58,6 @@ body {
     grid-auto-rows: 150px;
     
   } 
-  
-  img {
-    border: 1px solid white;
-    width:100%;
-    height:100%;
-    
-  } 
-  
   
   .section1{
     grid-column: 1;
@@ -165,4 +165,15 @@ body {
     color: white;
     text-align: center;
     font-size: 20px;
+  }
+
+  img{
+    display: block;
+    max-width: 25%;
+    max-height: 25%;
+    margin-left: 30px;
+  }
+
+  iframe{
+    margin-left: 30px;
   }
