--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -13,6 +13,11 @@ body {
     margin-left: 30px
   }
 
+  h2 {
+    margin-bottom: 20px;
+    margin-left: 30px
+  }
+
   p {
     font-size: 18px;
     line-height: 1.6;
